# openblasConfig

./: meson.build  meson_options.txt  readme.org
scripts/: run_check.py  write_file.py
